Feat: implement code verification with real provider
* feat: implement internal csrf middleware verification

* feat: implement sendVerification and verify phone with provider

* feat: update openapi spec

* feat: add database migration
